Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-9998

Fix issues caught by Clang's -Wpointer-bool-conversion warning

    XMLWordPrintable

Details

    Description

      MariaDB 10.0 triggers Clang 3.6's -Wpointer-bool-conversion warnings. These warnings trigger when a pointer which the compiler knows cannot be null is converted to a bool (e.g. in a comparison). These mostly arise from statically or stack-allocated arrays or structures, but may also be triggered by _attribute_((nonnull)) on functions.

      The attached patch cleans up these issues in the client, server, and InnoDB — mostly by removing or adjusting the comparison — so that they compile successfully with -Werror=pointer-bool-conversion.

      Thanks,
      — David

      Attachments

        Activity

          People

            serg Sergei Golubchik
            davidgow David Gow
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: