MDEV-9998 Fix issues caught by Clang's -Wpointer-bool-conversion warning

remove useless checks
and a couple of others