storage/connect/filamzip.cpp
@@ -341,7 +341,7 @@ bool ZIPUTIL::OpenTable(PGLOBAL g, MODE mode, char *fn, bool append)
 bool ZIPUTIL::addEntry(PGLOBAL g, char *entry)
 {
 	//?? we dont need the stinking time
-	zip_fileinfo zi = { 0, 0, 0, 0, 0, 0, 0, 0, 0 };
+	zip_fileinfo zi = { {0, 0, 0, 0, 0, 0}, 0, 0, 0 };
 
 	getTime(zi.tmz_date);
 	target = entry;
