storage/innobase/dict/dict0dict.cc
@@ -6251,6 +6251,7 @@ dict_set_corrupted_index_cache_only(
 	dict_table_t*	table)		/*!< in/out: table */
 {
 	ut_ad(index != NULL);
+	ut_ad(table != NULL);
 	ut_ad(mutex_own(&dict_sys->mutex));
 	ut_ad(!dict_table_is_comp(dict_sys->sys_tables));
 	ut_ad(!dict_table_is_comp(dict_sys->sys_indexes));
@@ -6260,9 +6261,7 @@ dict_set_corrupted_index_cache_only(
 	if (dict_index_is_clust(index)) {
 		dict_table_t*	corrupt_table;
 
-		corrupt_table = (table != NULL) ? table : index->table;
-		ut_ad((index->table != NULL) || (table != NULL)
-		      || index->table  == table);
+		corrupt_table = table;
 
 		if (corrupt_table) {
 			corrupt_table->corrupted = TRUE;
