storage/innobase/handler/ha_innodb.cc
@@ -2000,12 +2000,11 @@ innobase_get_stmt(
 {
 	const char* query = NULL;
 	LEX_STRING *stmt = NULL;
-	if (thd) {
-		stmt = thd_query_string(thd);
-		if (stmt) {
-			*length = stmt->length;
-			query = stmt->str;
-		}
+	ut_ad(thd != NULL);
+	stmt = thd_query_string(thd);
+	if (stmt) {
+		*length = stmt->length;
+		query = stmt->str;
 	}
 	return (query);
 }
