storage/xtradb/handler/ha_innodb.cc
@@ -2326,12 +2326,11 @@ innobase_get_stmt(
 {
 	const char* query = NULL;
 	LEX_STRING *stmt = NULL;
-	if (thd) {
-		stmt = thd_query_string(thd);
-		if (stmt) {
-			*length = stmt->length;
-			query = stmt->str;
-		}
+	ut_ad(thd != NULL);
+	stmt = thd_query_string(thd);
+	if (stmt) {
+		*length = stmt->length;
+		query = stmt->str;
 	}
 	return (query);
 }
